Kubernetes/database.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exam
  name: mini-projet-mysql
  labels:
    app: mini-projet
spec:
  ports:
    - port: 3306
  selector:
    app: mini-projet
    tier: mysql
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: exam
  name: mini-projet-mysql
  labels:
    app: mini-projet
spec:
  serviceName: "mini-projet-mysql"
  replicas: 2
  selector:
    matchLabels:
      app: mini-projet
      tier: mysql
  template:
    metadata:
      labels:
        app: mini-projet
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            limits:
              cpu: "0.3"
              memory: "400Mi"
            requests:
              cpu: "0.2"
              memory: "200Mi"

          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
        labels:
          app: mini-projet
          tier: mysql
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 250Mi
